z-index fix

--- a/making/making.css
+++ b/making/making.css
@@ -2,10 +2,6 @@
 
 /* ============ 01 section layouts & nav bars ==================*/
 
-html {
-    overflow-x: hidden;
-}
-
 body {
     overflow-x: hidden;
 }
@@ -85,20 +81,10 @@ header {
     margin-left: calc(-50vw + 50%);
     margin-top: 0;
     padding: 0;
-    z-index: -10;
+    z-index: -100;
+    background: linear-gradient(180deg, #FF2E00 0%, rgba(255, 255, 255, 0.00) 25%);
 }
 
-.background-texts::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(180deg, #FF2E00 0%, rgba(255, 255, 255, 0.00) 25%);
-    z-index: -1;
-    pointer-events: none;
-}
 
 .background-texts::first-letter {
     font-family: "Birthstone Bounce";
